src/components/Player/Player.styl
$player-size = 36px
$player-ratio = (9/16*100%)
$player-ratio-4by3 = (3/4*100%)
$player-ratio-hd = (1/2.35*100%)
$compact-player-ratio = (275/960*100%)
$cut-player-ratio = (798/1920*100%)

.wrapper-player {
	height 100%
}

.Player {
	display block
	position relative
	overflow hidden
	margin 0 auto
	background transparent
	color #FFF
	transform translateZ(0)

	@media $tablet {
		height auto
	}
	@media $phone {
		position relative
		border-radius 0
	}
	@media $smallPhone {
		&_ios&_shrareOpened {
			.ChangeQuality {
				opacity 0 !important
			}
		}
		&_ios&_changeQualityOpened {
			.Share {
				opacity 0
			}
		}
	}
	&:before {
		content ''
		display block
		padding-bottom $player-ratio
	}
	video {
		opacity 1
		transition opacity 0.3s
	}

	&__play {
		position absolute
		top 50%
		left 50%
		margin-top -38px
		margin-left -38px
		background-color $linkColor
		pointer-events none
		transition background-color $duration, opacity $duration

		&__icon {
			display block
			fill #FFF
			transition fill $duration
		}
	}
	&__block {
		display block
		position relative
	}
	&__poster, &__video {
		.vjs-big-play-button {
			svg {
				width 100%
				height 100%
				fill $linkColor
				transition fill $duration
			}
		}
		&:hover .vjs-big-play-button {
			background #FFF
			transform scale(1.079)

			svg {
				fill $linkHoverColor
			}
		}
		&:active .vjs-big-play-button {
			transform scale(0.95) translateZ(0)

			@media $phone {
				transform scale(0.9) translateZ(0)
			}
		}
	}
	&__video {
		position absolute
		left 0
		top 0
		width 100% !important
		height auto !important
		outline none
		border 0
		overflow hidden


		&:before {
			content ''
			display block
			padding-bottom $player-ratio
		}
		@media $phone {
			height auto
		}
		&.vjs-fullscreen {
			background #000
			top auto
		}
	}
	&__poster + &__video {
		.vjs-poster, .vjs-big-play-button {
			display none !important
		}
	}
	&__poster {
		fullsize()
		cursor pointer
		display block !important
		background-position center
		background-size cover
		background-repeat no-repeat
		will-change opacity
		z-index 2
		@media $phone {
			transition opacity 0.2s, visibility 0s

			&_hide {
				visibility hidden
				opacity 0
				transition opacity 0.2s, visibility 0s 0.2s
			}
		}
		
	}
	.vjs-poster, .vjs-tech {
		position absolute
		left -0.25%
		top -0.25%
		height 100.5%
		width 100.5%
		cursor pointer
		transform translateZ(0)
	}

	&_banners {
		overflow hidden
		height 100%

		.Player__video {
			width 100%
			height 100% !important
			top 0
			margin-top 0
		}
		.Player__poster {
			overflow visible
			height 100%
			background-repeat no-repeat
		}
		.vjs-volume-panel, .vjs-fullscreen-control {
			display none
		}
	}

	&_muted {
		overflow hidden
		height 100%
		.vjs-volume-panel {
			display none
		}
	}
	&_hideVideo {
		video {
			opacity 0 !important
		}
	}
	&_playOnScroll {
		.vjs-tech {
			pointer-events none
			cursor default
		}
		.vjs-big-play-button {
			display none
		}	
	}
	&_ios {
		video {
			opacity 1 !important
		}
	}
	&_theme_dark {
		color $textColor
	}
	&_theme_light {
		color #ffffff
	}
	&_4by3 {
		&:before {
			padding-bottom $player-ratio-4by3
		}
		.Player__video {
			margin-top (-($player-ratio-4by3/2))

			&:before {
				padding-bottom $player-ratio-4by3
			}
		}
	}
	&_fullhd {
		&:before {
			padding-bottom $player-ratio-hd

			@media $phone {
				padding-bottom 43%
			}
		}
		.Player__video {
			&:before {
				padding-bottom $player-ratio-hd
			}
		}
	}
	&_compact {
		&:before {
			padding-bottom $compact-player-ratio

			@media $tablet {
				padding-bottom 56.25%
			}
		}
	}
	&_cut{
		&:before {
			padding-bottom 25.828%

			@media $tablet {
				padding-bottom 43%
			}
		}

		.Player__video {
			&:before {
				padding-bottom $cut-player-ratio
			}
		}
	}
	&_compact&_fullhd {
		&:before {
			@media $tablet {
				padding-bottom 43%
			}
		}
	}
	&_autoPlay {
		video {
			pointer-events none
		}
	}

	&_middle {
		position absolute
		width 960px
		height 540px
		top 50%
		left 50%
		margin -270px 0 0 -480px

		@media screen and (max-height:800px), screen and (max-width:1250px) {
			width 870px
			height 487px
			margin-left -435px
			margin-top -243px
		}
		@media screen and (max-height:740px), screen and (max-width:1100px) {
			width 800px
			height 448px
			margin-left -400px
			margin-top -224px
		}
		@media $verticalTablet {
			width 680px
			height 380px
			margin-left -340px
			margin-top -190px
		}
		@media $phone {
			width 280px
			height 156px
			margin-left -140px
			margin-top -78px
		}
	}
	&_originSize {
		display block

		&:before {
			display none
			content none
		}
		.vjs-poster {
			fullsize()
		}
		.vjs-tech {
			display block
			position static
			width 100%
			height auto
		}
		.Player__video {
			position relative
			margin 0

			&:before {
				display none
			}
		}
	}
	&_hideBar {
		.vjs-has-started .vjs-control-bar {
			display none
		}
	}
}

.vjs-using-native-controls.vjs-has-started + .Share {
	transform translateX(-58px)
	transition transform $duration*0.5

	& + .ChangeQuality {
		opacity 1
		transition opacity $duration*0.5
	}
}

